# qwiicWithForth

./: .gitignore  CMakeLists.txt  README.md  ds3231.fth  htu21d.fth  pf_i2c.c  sources.cmake
